--- a/weather prediction.html
+++ b/weather prediction.html
@@ -220,7 +220,7 @@
   </section>     
 
   <script>     
-    const apiKey = "3b239fc9f9c7f697238bf15c503a5667"; // 🔑 Replace with your OpenWeatherMap API key     
+    const apiKey = // 🔑 Replace with your OpenWeatherMap API key     
     const searchBtn = document.getElementById("searchBtn");     
     const input = document.getElementById("city");     
     const result = document.getElementById("result");     
@@ -437,3 +437,4 @@
   </script> 
 </body> 
 </html>
+
